[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

authors = ["Jake Hillion <jake@hillion.co.uk>"]

[workspace.metadata.crane]
name = "testenv"

[workspace.dependencies]
proc-macro2 = { version = "1.0.95" }
syn = { version = "2.0.100" }
